<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GPSOClient</string>
    <string name="main_section">Main</string>
    <string name="title_quests">Quests</string>
    <string name="title_region">Regions</string>
    <string name="title_inventory">Inventory</string>
    <string name="title_attributes">Attributes</string>
    <string name="title_map">Map</string>
    <string name="action_settings">Settings</string>
    <string name="UpdateFiles">Update Files Now</string>
    <string name="UpdatePosition">{fa-globe}\n Update Position</string>
    <string name="Logout">{fa-sign-out}\n Logout</string>
    <string name="title_activity_quest_info_actitivity">QuestInfoActitivity</string>
    <string name="title_activity_region_info_actitivity">RegionInfoActitivity</string>
    <string name="title_activity_item_info">ItemInfoActivity</string>
    <string name="title_activity_item_info_actitivity">ItemInfoActitivity</string>
    <string name="title_activity_scanner">Scanner</string>
    <string name="title_activity_reward_info">RewardInfoActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_character">CharacterActivity</string>
    <string name="title_activity_bluetooth">BluetoothActivity</string>
    <string name="title_device_list">DeviceListActivity</string>
    <string name="hello_world">Hello world</string>
    <string name="btn_settings">{fa-cog}\n Settings</string>
    <string name="Remove">{fa-trash-o}Remove</string>
    <string name="AcceptBtn">{fa-check}Accept</string>
    <string name="CompleteBtn">{fa-check-square-o}Complete</string>
    <string name="btn_scan_qrcode">{fa-qrcode}\n Scan QR code</string>
    <string name="btn_receive_via_bt">{fa-gift}\n Receive item via BT</string>

</resources>
