<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="12dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:id="@+id/questNameLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="32sp"
                android:text="Epic quest"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp" />
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/questImageView"
                android:src="@drawable/no_image_512x512"
                android:paddingBottom="20dp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:id="@+id/questCompletedImage"
                android:src="@drawable/icon_completed"

                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:id="@+id/questStatusTextView"

                android:text="completed"/>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/questInfoTextView"
                android:text="Some info about quest"
                android:paddingBottom="20dp" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/timeLeftTextView"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textAlignment="center"
                android:text="Time Left: 20s"
                />

            <ProgressBar
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/timeLeftProgressBar"
                android:layout_gravity="center_horizontal"
                android:max="10"
                android:progress="0"
                android:indeterminate="false" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="Completion type"
                android:id="@+id/questCompletionTextView"
                android:paddingBottom="10dp" />

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/answerEditText"
                android:hint="Input answer to complete"
                android:paddingBottom="20dp" />


            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/AcceptBtn"
                    android:onClick="AcceptQuest"
                    android:id="@+id/acceptButton" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/CompleteBtn"
                    android:onClick="CompleteQuest"
                    android:id="@+id/completeButton" />

<!--  android:drawableTop="@+drawable/btn_check_buttonless_on"-->

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Remove"
                    android:onClick="RemoveActiveQuest"
                    android:layout_gravity="right"
                    android:id="@+id/removeButton" />

                <!--android:drawableTop="@+drawable/ic_delete"-->
            </LinearLayout>


        </LinearLayout>
    </ScrollView>
</FrameLayout>

